--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <article class="card" id="pengertian">
         <h2>Pengertian</h2>
         <img src="/assets/pengertian-html.jpg" alt="coding-image" class="featured-image">
-        <p class="pengertian-exp">HTML adalah singkatan dari Hypertext Markup Language. Pengertian HTML sering kali dikaitkan dengan bahasa pemrograman. Akan tetapi, sejatinya, HTML bukan sebuah bahasa pemrograman (programming languange), melainkan sebuah markup languange.
+        <p class="pengertian-exp">HTML adalah singkatan dari Hypertext Markup Language. Pengertian HTML sering kali dikaitkan dengan bahasa pemrograman. Akan tetapi, sejatinya, HTML bukan sebuah bahasa pemrograman (programming languange), melainkan sebuah markup languange. uwu
 
             Apakah kamu semakin bingung dengan penjelasan itu?
                 
